namespace DataAccessLayer.Models;

public class BookCart
{
    public int BookId { get; set; }
    public int CartId { get; set; }
}