namespace DataAccessLayer.Models;

public class BookGenre
{
    public int BookId { get; set; }
    public int GenreId { get; set; }
}