namespace WebAPI.Models.Genre;

public class GenreModel
{
    public int Id { get; set; }
    public string Name { get; set; }
}